--- a/wp-content/themes/oceanwp-child/css/theme.css
+++ b/wp-content/themes/oceanwp-child/css/theme.css
@@ -78,11 +78,12 @@
 .home-text-container {
   background-color: white;
   padding-bottom: 82px;
-  padding-top: 130px;
+  padding-top: 70px;
 }
 
 .title-gout {
   padding-top: 58px;
+  padding-bottom: 7px;
 }
 
 .container-gout-img {
@@ -377,6 +378,10 @@ p {
   width: auto !important;
 }
 
+.title-2 {
+  padding-bottom: 47px;
+}
+
 .commander-title {
   padding-top: 70px;
 }
@@ -438,6 +443,10 @@ p {
   padding: 20px 40px 20px 40px;
   border-radius: 5px;
   word-break: initial;
+}
+
+.command-btn a:hover {
+  background-color: #c02e44;
 }
 
 .command-col {
